# python_parser

./: .gitignore  README.md  pyproject.toml
src/: getDataFromLink.py  getLinksFromTxt.py  main.py  writePersonInFile.py
